# TPS-Small-Animal

./: LICENSE  README.md  setup.cfg  tox.ini
Example/: CT_Big.tif  XRay_Big.tif  parameters-settings.txt
TPS_Small_Animal/: _dock_widget.py  module_Reg.py  parameters-settings.txt  utils.py  utils_metric.py  utils_plot.py
TPS_Small_Animal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
