[metadata]
name = TPS-Small-Animal
version = 0.1.2
author = Marc Boucsein
license = BSD-3-Clause
description = Open images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.9

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy



[options.entry_points] 
napari.plugin = 
    TPS-Small-Animal = TPS_Small_Animal
